fix cat tooltip on safari

--- a/css/siteintro.css
+++ b/css/siteintro.css
@@ -105,3 +105,9 @@
     font-size: 1.2rem;
   }
 }
+
+@media not all and (min-resolution: 0.001dpcm) {
+  .toolTipCat {
+    margin-left: -50%;
+  }
+}
